// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Command renders correctly 1`] = `
<li
  className="nav-item"
>
  <a
    className="nav-link text-dark font-italic bg-light"
    href="#"
  >
    <i
      className="fa mr-3 text-primary fa-fw fa-th-large"
    />
    Home
  </a>
</li>
`;

exports[`Menu renders correctly 1`] = `
Array [
  <p
    className="text-gray font-weight-bold text-uppercase px-3 small pb-4 mb-0"
  >
    Main
  </p>,
  <ul
    className="nav flex-column bg-white mb-0"
  >
    <li
      className="nav-item"
    >
      <a
        className="nav-link text-dark font-italic bg-light"
        href="#"
      >
        <i
          className="fa mr-3 text-primary fa-fw fa-th-large"
        />
        Home
      </a>
    </li>
    <li
      className="nav-item"
    >
      <a
        className="nav-link text-dark font-italic bg-light"
        href="#"
      >
        <i
          className="fa mr-3 text-primary fa-fw fa-address-card"
        />
        About
      </a>
    </li>
    <li
      className="nav-item"
    >
      <a
        className="nav-link text-dark font-italic bg-light"
        href="#"
      >
        <i
          className="fa mr-3 text-primary fa-fw fa-cubes"
        />
        Services
      </a>
    </li>
    <li
      className="nav-item"
    >
      <a
        className="nav-link text-dark font-italic bg-light"
        href="#"
      >
        <i
          className="fa mr-3 text-primary fa-fw fa-picture-o"
        />
        Gallery
      </a>
    </li>
  </ul>,
]
`;

exports[`MenuList renders correctly 1`] = `
Array [
  <p
    className="text-gray font-weight-bold text-uppercase px-3 small pb-4 mb-0"
  >
    Main
  </p>,
  <ul
    className="nav flex-column bg-white mb-0"
  >
    <li
      className="nav-item"
    >
      <a
        className="nav-link text-dark font-italic bg-light"
        href="#"
      >
        <i
          className="fa mr-3 text-primary fa-fw fa-th-large"
        />
        Home
      </a>
    </li>
    <li
      className="nav-item"
    >
      <a
        className="nav-link text-dark font-italic bg-light"
        href="#"
      >
        <i
          className="fa mr-3 text-primary fa-fw fa-address-card"
        />
        About
      </a>
    </li>
    <li
      className="nav-item"
    >
      <a
        className="nav-link text-dark font-italic bg-light"
        href="#"
      >
        <i
          className="fa mr-3 text-primary fa-fw fa-cubes"
        />
        Services
      </a>
    </li>
    <li
      className="nav-item"
    >
      <a
        className="nav-link text-dark font-italic bg-light"
        href="#"
      >
        <i
          className="fa mr-3 text-primary fa-fw fa-picture-o"
        />
        Gallery
      </a>
    </li>
  </ul>,
  <p
    className="text-gray font-weight-bold text-uppercase px-3 small pb-4 mb-0"
  >
    Charts
  </p>,
  <ul
    className="nav flex-column bg-white mb-0"
  >
    <li
      className="nav-item"
    >
      <a
        className="nav-link text-dark font-italic bg-light"
        href="#"
      >
        <i
          className="fa mr-3 text-primary fa-fw fa-bar-chart"
        />
        Bar Chart
      </a>
    </li>
    <li
      className="nav-item"
    >
      <a
        className="nav-link text-dark font-italic bg-light"
        href="#"
      >
        <i
          className="fa mr-3 text-primary fa-fw fa-pie-chart"
        />
        Pie Chart
      </a>
    </li>
  </ul>,
]
`;

exports[`Sidebar renders correctly 1`] = `
<div
  className="vertical-nav bg-white"
  id="sidebar"
>
  <div
    className="py-3 px-3 mb-3 bg-light"
  >
    <div
      className="media d-flex align-items-center"
    >
      <img
        alt="..."
        className="mr-3 rounded-circle img-thumbnail shadow-sm"
        src="https://test.com"
        width="65"
      />
      <div
        className="media-body"
      >
        <h4
          className="m-0"
        >
          Nuthan Kumar
        </h4>
        <p
          className="font-weight-light text-muted mb-0"
        >
          Developer
        </p>
      </div>
    </div>
    <div
      className="w-100 row .text-gray"
    >
      <i
        className="fa mr-3 fa-fw fa-power-off"
      />
    </div>
  </div>
  <p
    className="text-gray font-weight-bold text-uppercase px-3 small pb-4 mb-0"
  >
    Main
  </p>
  <ul
    className="nav flex-column bg-white mb-0"
  >
    <li
      className="nav-item"
    >
      <a
        className="nav-link text-dark font-italic bg-light"
        href="#"
      >
        <i
          className="fa mr-3 text-primary fa-fw fa-th-large"
        />
        Home
      </a>
    </li>
    <li
      className="nav-item"
    >
      <a
        className="nav-link text-dark font-italic bg-light"
        href="#"
      >
        <i
          className="fa mr-3 text-primary fa-fw fa-address-card"
        />
        About
      </a>
    </li>
    <li
      className="nav-item"
    >
      <a
        className="nav-link text-dark font-italic bg-light"
        href="#"
      >
        <i
          className="fa mr-3 text-primary fa-fw fa-cubes"
        />
        Services
      </a>
    </li>
    <li
      className="nav-item"
    >
      <a
        className="nav-link text-dark font-italic bg-light"
        href="#"
      >
        <i
          className="fa mr-3 text-primary fa-fw fa-picture-o"
        />
        Gallery
      </a>
    </li>
  </ul>
  <p
    className="text-gray font-weight-bold text-uppercase px-3 small pb-4 mb-0"
  >
    Charts
  </p>
  <ul
    className="nav flex-column bg-white mb-0"
  >
    <li
      className="nav-item"
    >
      <a
        className="nav-link text-dark font-italic bg-light"
        href="#"
      >
        <i
          className="fa mr-3 text-primary fa-fw fa-bar-chart"
        />
        Bar Chart
      </a>
    </li>
    <li
      className="nav-item"
    >
      <a
        className="nav-link text-dark font-italic bg-light"
        href="#"
      >
        <i
          className="fa mr-3 text-primary fa-fw fa-pie-chart"
        />
        Pie Chart
      </a>
    </li>
  </ul>
</div>
`;
